@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2010/03/02 21:51:06 jkunz Exp $
+# $NetBSD: Makefile,v 1.2 2010/03/08 22:00:01 jkunz Exp $
 #
 
-DISTNAME=	qlandkartegt-0.17.1
+DISTNAME=	qlandkartegt-0.18.0
 CATEGORIES=	geography
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=qlandkartegt/}
 
@@ -12,7 +12,7 @@ LICENSE=	gnu-gpl-v2
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 
-WRKSRC=		${WRKDIR}/qlandkartegt-0.17.1
+WRKSRC=		${WRKDIR}/qlandkartegt-0.18.0
 USE_LANGUAGES=	c c++
 USE_CMAKE=	yes
 
